<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cont"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_round"
    android:orientation="vertical">

    <TextView
        android:id="@+id/investLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_toStartOf="@+id/profitMarker"
        android:text="Investment"
        android:textColor="@color/brand_color_dark"
        android:textSize="@dimen/_14ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/investLabel"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Type"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/ownerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/typeLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Owner"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/brokerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/ownerLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/startPriceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/brokerLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/endPriceLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/startPriceLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/endPriceLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/commissionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/quantityLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/commissionLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/startTotalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/dateLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/endTotalLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_below="@+id/dateLabel"
        android:layout_toStartOf="@+id/quantityLabel"
        android:text="Broker"
        android:textColor="@color/gray"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/dialogButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btnDelete"
            style="@style/ButtonStyleRed"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/delete"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btnClose"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/close"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btnUpdate"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/update"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</RelativeLayout>
